# localexpertcli

./: README.md  pyproject.toml
docs/: ARCHITECTURE.md
src/localexpertcli/: __init__.py  crawler.py  main.py
src/localexpertcli/cli/: __init__.py  commands.py
src/localexpertcli/core/: __init__.py  fetcher.py  parser.py  processor.py
src/localexpertcli/fetchers/: __init__.py  http_fetcher.py
src/localexpertcli/parsers/: __init__.py  html_parser.py
src/localexpertcli/processors/: __init__.py
src/localexpertcli/services/: __init__.py  crawler.py  rate_limiter.py  url_utils.py
